Fix image alignment

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -165,3 +165,6 @@ img {
 .thumbail-row > img {
     width: 20%;
 }
+.thumbail-row > * {
+    vertical-align: text-top;
+}
